--- a/home.html
+++ b/home.html
@@ -156,7 +156,7 @@
 <header data-bs-theme="dark">
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Carousel</a>
+      <a class="navbar-brand" href="#">The Great Outdoor</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -191,32 +191,32 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+        <img class="bd-placeholder-img" width="100%" height="100%" src="./images/Garfield-StoryImage.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></img>
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            <h1>National Parks</h1>
+            <p class="opacity-75">Let us help you find an Outdoor sanctuary near you</p>
+            <p><a class="btn btn-lg btn-primary"  href="parks.html">GO</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+        <img class="bd-placeholder-img" width="100%" height="100%" src="./images/Cabot-StoryImg.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></img>
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <h1>The Great Outdoors</h1>
+            <p>It is our mission here at The Great Outdoors for everyone to know all of the beautiful parks and mountains around them</p>
+            <p><a class="btn btn-lg btn-primary" href="parks.html">Learn more</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+        <img class="bd-placeholder-img" width="100%" height="100%" src="./images/Eisenhower-StoryImage_2.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></img>
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <h1>Mountain Information</h1>
+            <p>Take a peak at some of the mountins near you</p>
+            <p><a class="btn btn-lg btn-primary" href="mountains.html">Browse gallery</a></p>
           </div>
         </div>
       </div>
@@ -237,8 +237,8 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <h2 class="featurette-heading fw-normal lh-1">The Swiss Alps <span class="text-body-secondary">It’ll blow your mind.</span></h2>
+        <p class="lead">The Swiss Alps rise majestically, their snow-capped peaks piercing the azure sky like ancient sentinels guarding the land below. Crisp mountain air dances through lush valleys dotted with wildflowers, while crystal-clear streams cascade down rocky slopes, their melodious murmurs echoing through the alpine meadows. As the sun sets behind the towering summits, painting the horizon with hues of pink and gold, a sense of awe washes over all who behold this pristine wilderness.</p>
       </div>
       <div class="col-md-5">
        <img src="./images/Tom-StoryImg.jpg" class="img Tom-StoryImg" alt="pic 1"width="500" height="500">
@@ -249,11 +249,11 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Everest <span class="text-body-secondary">See for yourself.</span></h2>
+        <p class="lead">In the heart of the Himalayas, the mighty peaks of Everest and K2 tower above the world, their icy crowns reaching towards the heavens. Jagged ridges cut through the clouds, creating a landscape of unparalleled grandeur and beauty. Prayer flags flutter in the wind, their colorful ribbons offering blessings to those who dare to venture into this sacred realm. Here, amidst the rugged terrain and breathtaking vistas, adventurers find both challenge and solace in the embrace of the world's highest mountains.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="./images/Tecumseh-StoryImg.jpg" class="img Tecumseh-StoryImg" alt="pic 2" width="500" height="500">
+        <img src="./images/Wildcat-StoryImage.jpg" class="img Tecumseh-StoryImg" alt="pic 2" width="500" height="500">
       </div>
     </div>
 
@@ -261,8 +261,8 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Rocky Mountains<span class="text-body-secondary">Checkmate.</span></h2>
+        <p class="lead">Nestled in the Rocky Mountains of North America, Banff National Park is a haven of natural splendor. Emerald lakes shimmer beneath towering peaks, their mirror-like surfaces reflecting the surrounding forests and snow-capped summits. Golden aspen trees blaze against a backdrop of evergreen forests, creating a tapestry of autumnal hues that seems to stretch on forever. With each passing season, this rugged wilderness reveals new wonders, drawing travelers from far and wide to experience its untamed beauty.</p>
       </div>
       <div class="col-md-5">
         <img src="./images/Washington-StoryImage_2.jpg" class="img Washington-StoryImage_2" alt="pic 3" width="500" height="500">
