--- a/home.html
+++ b/home.html
@@ -196,7 +196,7 @@
           <div class="carousel-caption text-start">
             <h1>National Parks</h1>
             <p class="opacity-75">Let us help you find an Outdoor sanctuary near you</p>
-            <p><a class="btn btn-lg btn-primary"  href="parks.html">GO</a></p>
+            <p><a class="btn btn-lg btn-primary"  href="Parks.html">GO</a></p>
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
           <div class="carousel-caption">
             <h1>The Great Outdoors</h1>
             <p>It is our mission here at The Great Outdoors for everyone to know all of the beautiful parks and mountains around them</p>
-            <p><a class="btn btn-lg btn-primary" href="parks.html">Learn more</a></p>
+            <p><a class="btn btn-lg btn-primary" href="Parks.html">Learn more</a></p>
           </div>
         </div>
       </div>
