--- a/home.html
+++ b/home.html
@@ -166,10 +166,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">National Parks</a>
+            <a class="nav-link" href="Parks.html">National Parks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Mountains Informatino</a>
+            <a class="nav-link" href="mountains.html">Mountains Informatino</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
