--- a/mountains.html
+++ b/mountains.html
@@ -183,13 +183,13 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+            <a class="nav-link"  href="home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Parks.html">National Parks</a>
+            <a class="nav-link "  href="Parks.html">National Parks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mountains.html">Mountain Informatino</a>
+            <a class="nav-link active" aria-current="page" href="mountains.html">Mountain Informatino</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -199,6 +199,27 @@
       </div>
     </div>
   </nav>
+  <div id="carouselExampleFade" class="carousel slide carousel-fade">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/Jackson-StoryImg.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/Hancock-StoryImage_2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/M-Tripyramids-StoryImg.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 
 
@@ -213,7 +234,7 @@
               </div>
               <div id="results">
               </div>
-              
+
           </main>
           <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
           <!-- <script src="scripts/locationData.js"></script> -->
@@ -221,6 +242,7 @@
           <script src="scripts/nationalParkData.js"></script>
           <!-- <script src="scripts/parkTypeData.js"></script> -->
           <script src="scripts/mountins.js"></script>
+          <script src="site.css"></script>
 
 </body>
 
