--- a/Parks.html
+++ b/Parks.html
@@ -183,10 +183,10 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+            <a class="nav-link "  href="home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Parks.html">National Parks</a>
+            <a class="nav-link active"  aria-current="page" href="Parks.html">National Parks</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="mountains.html">Mountain Informatino</a>
@@ -199,8 +199,29 @@
       </div>
     </div>
   </nav>
+  <div id="carouselExampleFade" class="carousel slide carousel-fade">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/Carrigain-StoryImage_2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/Field-StoryImage.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/Jackson-StoryImg.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-  <main class="container">
+  <main class="container" id="theParkFinder">
     <div class="bg-body-tertiary p-5 rounded">
       <form>
         <div class="mb-3">
@@ -243,6 +264,7 @@
   <script src="scripts/nationalParkData.js"></script>
   <!-- <script src="scripts/parkTypeData.js"></script> -->
   <script src="scripts/Parks.js"></script>
+  <script src="site.css"></script>
 
 
 </body>
